--- a/css/main.less
+++ b/css/main.less
@@ -1,9 +1,9 @@
 /* Import bootstrap 3 mixins and variables so we can use them */
-@import "build/bootstrap-3.2.0/variables.less";
-@import "build/bootstrap-3.2.0/mixins.less";
+@import "build/bootstrap-3.3.5/variables.less";
+@import "build/bootstrap-3.3.5/mixins.less";
 
 /* Import core mixins so we can use them */
-@import "../../../../concrete/css/build/core/include/mixins.less"; 
+@import "../../../../concrete/css/build/core/include/mixins.less";
 
 /* Import our theme variables. */
 @import "presets/defaults.less";
@@ -20,9 +20,11 @@
 @import "build/body.less";
 @import "build/content.less";
 div.ccm-page {
+  @import "build/errors.less";
   @import "build/header.less";
   @import "build/pagination.less";
   @import "build/breadcrumb.less";
+  @import "build/captcha.less";
   @import "build/search.less";
   @import "build/buttons.less";
 
@@ -49,6 +51,9 @@ div.ccm-page {
   @import "build/blocks/tags.less";
   @import "build/blocks/topic-list.less";
   @import "build/blocks/date-navigation.less";
+
+  @import "build/add-ons/calendar.less";
+
 }
 
 @import "build/miscellaneous-styles.less";
