Changed backgrounds and other colors according to the wireframe

--- a/css/presets/defaults.less
+++ b/css/presets/defaults.less
@@ -7,15 +7,15 @@
  */
 
 // Global body background
-@page-background-color: #fff;
+@page-background-color: rgb(240, 238, 223);
 
 // Top Header - Website Title */
-@header-background-color: #000;
-@header-site-title-type-color: #fff;
+@header-background-color: rgb(240, 238, 223);
+@header-site-title-type-color: rgb(0, 0, 0);
 @header-site-title-type-font-weight: 400;
 @header-site-title-type-font-size: 2.3em;
 @header-site-title-type-text-transform: none;
-@header-site-title-type-font-family: 'Berthold Gotham';
+@header-site-title-type-font-family: 'Georgia';
 
 // Top Header Search
 @header-search-input-icon-color: #cbcbcb;
@@ -23,10 +23,10 @@
 @header-search-input-background-color: #ffffff;
 
 // Top Header - Main Navigation */
-@header-navigation-type-color: #fff;
+@header-navigation-type-color: rgb(0, 0, 0);
 @header-navigation-type-font-size: 1.2em;
 @header-navigation-type-font-weight: 500;
-@header-navigation-type-font-family: 'Berthold Gotham';
+@header-navigation-type-font-family: 'Georgia';
 @header-navigation-type-text-transform: none;
 
 @header-navigation-hover-color: #abddff;
@@ -48,40 +48,40 @@
 
 // Headings
 @h1-type-font-family: ~"'Helvetica Neue', Helvetica, Arial, sans-serif";
-@h1-type-color: #F36E21;
+@h1-type-color: rgb(0, 0, 0);
 @h1-type-font-size: 2.1em;
 @h1-type-font-weight: 700;
 
 @h2-type-font-family: ~"'Helvetica Neue', Helvetica, Arial, sans-serif";
-@h2-type-color: #F36E21;
+@h2-type-color: rgb(0, 0, 0);
 @h2-type-font-size: 1.46em;
 @h2-type-font-weight: 700;
 
 @h3-type-font-family: ~"'Helvetica Neue', Helvetica, Arial, sans-serif";
-@h3-type-color: #F36E21;
+@h3-type-color: rgb(0, 0, 0);
 @h3-type-font-size: 1.25em;
 @h3-type-font-weight: 700;
 
 @h4-type-font-family: ~"'Helvetica Neue', Helvetica, Arial, sans-serif";
-@h4-type-color: #513127;
+@h4-type-color: rgb(0, 0, 0);
 @h4-type-font-size: 1.05em;
 @h4-type-font-weight: 700;
 
 @h5-type-font-family: ~"'Helvetica Neue', Helvetica, Arial, sans-serif";
-@h5-type-color: #513127;
+@h5-type-color: rgb(0, 0, 0);
 @h5-type-font-size: 0.73em;
 @h5-type-font-weight: 700;
 @h5-type-text-transform: uppercase;
 
 @h6-type-font-family: ~"'Helvetica Neue', Helvetica, Arial, sans-serif";
-@h6-type-color: #513127;
+@h6-type-color: rgb(0, 0, 0);
 @h6-type-font-size: 0.73em;
 @h6-type-font-weight: 400;
 @h6-type-text-transform: uppercase;
 
 // Page title block
-@page-title-type-font-family: 'Titillium Web';
-@page-title-type-color: #F36E21;
+@page-title-type-font-family: 'Georgia';
+@page-title-type-color: rgb(0, 0, 0);
 @page-title-type-font-size: 1.73em;
 @page-title-type-font-weight: 700;
 @page-title-type-text-transform: uppercase;
@@ -112,11 +112,11 @@
 @content-section-divider-color: #ececec;
 
 // Footer site title
-@footer-site-title-type-color: #F36E21;
+@footer-site-title-type-color: rgb(217, 217, 217);
 @footer-site-title-type-font-weight: 900;
 @footer-site-title-type-font-size: 1.2em;
 @footer-site-title-type-text-transform: uppercase;
-@footer-site-title-type-font-family: 'Titillium Web';
+@footer-site-title-type-font-family: 'Georgia';
 
 // Footer social icons
 @footer-social-icon-color: #d1d1d1;
@@ -129,11 +129,11 @@
 @accent-background-color: #EEEEEE;
 @accent-header-color: #988e47;
 
-@title-thin-type-font-family: 'Titillium Web';
+@title-thin-type-font-family: 'Georgia';
 @title-thin-type-color: #75ca2a;
 @title-thin-type-font-size: 2.46em;
 
-@title-caps-type-font-family: 'Titillium Web';
+@title-caps-type-font-family: 'Georgia';
 @title-caps-type-color: #75ca2a;
 @title-caps-type-font-size: 1.73em;
 
@@ -145,7 +145,7 @@
 @home-feature-title-color: #1a1a1a;
 @home-feature-icon-color: #1a1a1a;
 
-@footer-top-background-color: #ffffff;
+@footer-top-background-color: rgb(42, 42, 42);
 @footer-bottom-background-color: transparent;
 @footer-text-color: #5b676c;
 @footer-section-divider-color: #d9d9d9;
